# alexandria

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README  README.md  nginx.conf  pyproject.toml  supervisord.conf
backend/: README.md  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 32e07a39e29e_added_user_table.py
backend/alexandria_backend/: main.py
backend/core/: config.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/server/: nginx.conf
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/service/: productservice.tsx
frontend/src/app/ui/: cover.tsx  navbar.tsx  recents.tsx  sidenav.tsx
