[tool.poetry]
name = "alexandria-backend"
version = "0.1.0"
description = ""
authors = ["lcscosta <lcscosta@disroot.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.118.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
